--- a/index.html
+++ b/index.html
@@ -4,10 +4,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fylo Data Storage</title>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body class="body">
 
-  <h1>Hola Mundo</h1>
+  <section class="section_total">
+    <div class="wrapper">
+      <article class="section_1">
+        <div class="container_logo">
+          <img src="images/logo.svg" alt="">
+        </div>
+    
+        <div class="container_menu">
+          <div class="container_icon">
+            <img src="images/icon-document.svg" alt="">
+          </div>
+          <div class="container_icon">
+            <img src="images/icon-folder.svg" alt="">
+          </div>
+          <div class="container_icon">
+            <img src="images/icon-upload.svg" alt="">
+          </div>
+        </div>
+      </article>
+      
+      <article class="section_2">
+        <div class="container_h2">
+          <h2>You´ve used <span>815 GB</span> of your storage</h2>
+        </div>
+        <div class="container_range">
+          <div class="range">
+            <div class="circulo"></div>
+          </div>
+        </div>
+        <div class="container_gb">
+          <span>0 GB</span>
+          <span>1000 GB</span>
+        </div>
+        <article class="container_storage">
+          <h2>185</h2><span>gb left</span>
+        </article>
+      </article>
+    </div>
+  </section>
+  
   
 </body>
 </html>
