--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
           <span>0 GB</span>
           <span>1000 GB</span>
         </div>
-        <article class="container_storage">
+        <div class="container_storage">
           <h2>185</h2><span>gb left</span>
-        </article>
+        </div>
       </article>
     </div>
   </section>
