Challenge Finishedgit status

--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
 </head>
 <body class="body">
 
-  <section class="section_total">
+  <main class="section_total">
     <div class="wrapper">
-      <article class="section_1">
+      <div class="section_1">
         <div class="container_logo">
-          <img src="images/logo.svg" alt="">
+          <img src="images/logo.svg" alt="logo_img">
         </div>
     
         <div class="container_menu">
           <div class="container_icon">
-            <img src="images/icon-document.svg" alt="">
+            <img src="images/icon-document.svg" alt="icon_doc">
           </div>
           <div class="container_icon">
-            <img src="images/icon-folder.svg" alt="">
+            <img src="images/icon-folder.svg" alt="icon_folder">
           </div>
           <div class="container_icon">
-            <img src="images/icon-upload.svg" alt="">
+            <img src="images/icon-upload.svg" alt="icon_upload">
           </div>
         </div>
-      </article>
+      </div>
       
-      <article class="section_2">
+      <div class="section_2">
         <div class="container_h2">
           <h2>You´ve used <span>815 GB</span> of your storage</h2>
         </div>
@@ -46,9 +46,9 @@
         <div class="container_storage">
           <h2>185</h2><span>gb left</span>
         </div>
-      </article>
+      </div>
     </div>
-  </section>
+  </main>
   
   
 </body>
